--- a/Programa/ProjetoFinal/.settings/org.eclipse.core.resources.prefs
+++ b/Programa/ProjetoFinal/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/ex_final/FileManager.java=UTF-8
 encoding//src/ex_final/ItemA.java=UTF-8
+encoding//src/partA/Main.java=UTF-8
+encoding//src/partB/Main.java=UTF-8
+encoding//src/partC/Main.java=UTF-8
+encoding//src/partD/Main.java=UTF-8
